Updating unitary tests to mockBukkit